--- a/index.html
+++ b/index.html
@@ -42,25 +42,7 @@
   </script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.5/js/mdb.min.js"></script>
-<!--
-  <script>
-    $(document).ready(function () {
-      $.ajaxSetup({
-        cache: true
-      });
-      $.getScript('https://connect.facebook.net/en_US/sdk.js', function () {
-        FB.init({
-          xfbml: true,
-          appId: '1263721247114186',
-          version: 'v3.2' // or v2.1, v2.2, v2.3, ...
-        });
-        $("#fb-page").removeAttr('disabled');
-        $("iframe").removeAttr('disabled');
-        $("iframe").show();
-      });
-    });
-  </script>
--->
+
   <title>ABC Toys</title>
   <link href="main.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
@@ -398,10 +380,9 @@
                             class="fa fa-paper-plane ml-1"></i></button>
                       </div>
                     </form>
-                    <iframe
-                      src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FABCtoys1&tabs=timeline&width=500&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1263721247114186"
-                      width="500" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-                      allow="encrypted-media"></iframe>
+                    <div class="fb-page" data-href="https://www.facebook.com/ABCtoys1" data-tabs="timeline" data-width="500"
+                      data-height="320" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+                      data-show-facepile="true"></div>
                     <!-- Form contact -->
                   </div>
                   <!--Grid column-->
