--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
   </script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.5/js/mdb.min.js"></script>
+  <!--Google maps SDK-->
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAlsxObGA1kf5G8kRXfBDa8ZY8Z9Jgqt0U&callback=regular_map"></script>
+  <!-- Google Maps settings -->
+  <script>
+    // Regular map
+    function regular_map() {
+      var var_location = new google.maps.LatLng(37.533750, -122.337071);
+
+      var var_mapoptions = {
+        center: var_location,
+        zoom: 13
+      };
+
+      var var_map = new google.maps.Map(document.getElementById("map-container"),
+        var_mapoptions);
+
+      var var_marker = new google.maps.Marker({
+        position: var_location,
+        map: var_map,
+        title: "San Mateo"
+      });
+    }
+
+    // Initialize maps
+    google.maps.event.addDomListener(window, 'load', regular_map);
+  </script>
 
   <title>ABC Toys</title>
   <link href="main.css" rel="stylesheet">
@@ -145,10 +171,6 @@
                         <title>unsplash-logo</title>
                         <path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path>
                       </svg></span><span style="display:inline-block;padding:2px 3px">freestocks.org</span></a>
-                      <iframe
-                        src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FABCtoys1&width=124&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId=1263721247114186"
-                        width="124" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-                        allow="encrypted-media"></iframe>
                 </span>
               </div>
             </div>
@@ -351,6 +373,13 @@
                   Come visit us at:<br />
                   1234 ABC street, San Mateo, CA, 94401.
                 </address>
+                
+                <p class="text-center w-responsive mx-auto mb-1"><span>Click here to like our facebook page!
+                <iframe
+                  src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FABCtoys1&width=124&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId=1263721247114186"
+                  width="124" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+                  allow="encrypted-media"></iframe>
+                </span></p>
 
                 <!--Grid row-->
                 <div class="row justify-content-center">
@@ -427,10 +456,7 @@
                 <div class="col-md-8">
                   <!--Google map-->
                   <div id="map-container" class="z-depth-3 wow animated fadeInUp slow map-container mb-5 mx-0 px-0"
-                    style="height: 600px; width: auto;">
-                  <iframe width="600" height="450" frameborder="0" style="border:0"
-                    src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJjXW3vzWej4ARFqd3KwmJdb0&key=AIzaSyAlsxObGA1kf5G8kRXfBDa8ZY8Z9Jgqt0U"
-                    allowfullscreen></iframe></div>
+                    style="height: 600px; width: auto;"></div>
                 </div>
                 <!--Grid column-->
                 <div class="col-md-3 text-center align-content-center justify-content-center">
