tweaked some more stuff

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.5/js/mdb.min.js"></script>
   <!--Google maps SDK-->
-  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAlsxObGA1kf5G8kRXfBDa8ZY8Z9Jgqt0U&callback=regular_map"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAlsxObGA1kf5G8kRXfBDa8ZY8Z9Jgqt0U"></script>
   <!-- Google Maps settings -->
   <script>
     // Regular map
