--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
       <div class="mask rgba-stylish-strong">
         <div class="mask  pattern-7">
           <div class="container-fluid d-flex align-items-center justify-content-center h-100">
-            <div class="row d-flex justify-content-center text-center">
+            <div class="row d-flex justify-content-center text-center pt-4 pt-md-2">
               <div class="animated slow col-md-10 wow fadeIn mb-3">
 
                 <!--Heading-->
-                <h1 class="animated wow fadeInDown slow display-4 text-center font-weight-bold white-text pt-5 mb-2"
-                  data-wow-delay="0.3s">ABC
+                <h1 class="animated wow fadeInDown slow text-center font-weight-bold white-text mt-4 mt-md-0 pt-5 mb-2"
+                  data-wow-delay="0.3s" id="titleh1">ABC
                   Toys
                 </h1>
-                <h2 class="animated wow fadeIn slow h1 text-center font-weight-bold white-text" data-wow-delay="0.4s">
+                <h2 class="animated wow fadeIn slow text-center font-weight-bold white-text" data-wow-delay="0.4s" id="titleh2">
                   Making learning fun</h2>
 
                 <!--Divider-->
                 <hr class="animated wow fadeIn slow hr-light" data-wow-delay="0.4s">
 
                 <!--Description-->
-                <h4 class="animated wow fadeIn slow white-text my-4" data-wow-delay="0.4s">ABC Toys is a company that
+                <h4 class="animated wow fadeIn slow white-text my-4" data-wow-delay="0.4s" id="titledesc">ABC Toys is a company that
                   opened its doors in 2001
                   and it has kept its
                   mission
@@ -156,10 +156,10 @@
                   kindergarten kids but
                   that
                   challenge the kids' mind and motor skills making learning a fun task.</h4>
-                <h4 class="animated fadeIn slow white-text my-4 muted">By the way, parents love our toys too</h4>
+                <h4 class="animated fadeIn slow white-text my-4 muted" id="titledesc2">By the way, parents love our toys too</h4>
 
                 <!--Badge for Unsplash Photographer-->
-                <span class="white-text animated fadeIn slow">
+                <span class="white-text animated fadeIn slow" id="titlespan">
                   Photo by&nbsp;
                   <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px"
                     href="https://unsplash.com/@freestocks?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge"
@@ -170,7 +170,7 @@
                         viewBox="0 0 32 32">
                         <title>unsplash-logo</title>
                         <path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path>
-                      </svg></span><span style="display:inline-block;padding:2px 3px">freestocks.org</span></a>
+                      </svg></span><span style="display:inline-block;padding:2px 3px" id="freestocks">freestocks.org</span></a>
                 </span>
               </div>
             </div>
@@ -196,7 +196,7 @@
         <!--Grid row-->
         <div class="row d-flex justify-content-center mb-4">
           <!--Grid column-->
-          <div class="col-md-8">
+          <div class="col-md-8 col-12">
             <!-- Description -->
             <p class="font-weight-bolder">Here are five of our most popular Toys that we sell.</p>
           </div>
