--- a/index.html
+++ b/index.html
@@ -366,12 +366,12 @@
 
                 <!-- Heading -->
                 <h2 class="mb-2 font-weight-bold text-center h2-responsive my-4">Contact us</h2>
-                <p class="text-center w-responsive mx-auto mb-1">Do you have any questions? Please do not hesitate to
-                  contact us
-                  directly. We will reach out to you ASAP.</p>
+                <p class="text-center w-responsive mx-auto">Do you have any questions? Please do not hesitate to
+                  contact us directly. We will reach out to you ASAP.</p>
                 <address class="text-center">
                   Come visit us at:<br />
-                  1234 ABC street, San Mateo, CA, 94401.
+                  1234 ABC street, San Mateo, CA, 94401. Send us an email at <a href="mailto:contact@example.com?subject=Feedback">contact@example.com</a>
+                  or give us a call at <a href="tel:+16501231234">(650)123-1234</a>.
                 </address>
                 
                 <p class="text-center w-responsive mx-auto mb-1"><span>Click here to like our facebook page!
@@ -385,7 +385,7 @@
                 <div class="row justify-content-center">
 
                   <!--Grid column-->
-                  <div class="col-lg-8 col-md-12">
+                  <div class="col-lg-8 col-md-12 col-sm-12">
                     <!-- Form contact -->
                     <form class="p-5 grey-text">
                       <div class="md-form form-group"> <i class="icon icon-user prefix"></i>
