--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
@@ -16,59 +16,23 @@
   <meta property="og:description" content="ABC Toys, the best selection of toys, with the lowest of prices you can find anywhere. Come visit us and bring out your inner child!!" />
 
   <!--Bootstrap css-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <!-- Material Design Bootstrap -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.5/css/mdb.min.css" rel="stylesheet">
-  <!-- Fontawesome svg-->
-  <!--
-  <script src="https://use.fontawesome.com/releases/v5.8.0/js/all.js" data-auto-replace-svg="nest"></script>
-  -->
+  <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap css -->
+  <link href="./dist/css/mdb.min.css" rel="stylesheet">
   <!--Fontawesome css-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script type="text/javascript" src="./dist/js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="./dist/js/popper.min.js"></script>
+  <script type="text/javascript" src="./dist/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.5/js/mdb.min.js"></script>
+  <script type="text/javascript" src="./dist/js/mdb.min.js"></script>
+  <!--Backstretch Jquery Plugin for slideshow hero image-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
   <!--Google maps SDK-->
-  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAlsxObGA1kf5G8kRXfBDa8ZY8Z9Jgqt0U"></script>
-  <!-- Google Maps settings -->
-  <script>
-    // Regular map
-    function regular_map() {
-      var var_location = new google.maps.LatLng(37.533750, -122.337071);
-
-      var var_mapoptions = {
-        center: var_location,
-        zoom: 13
-      };
-
-      var var_map = new google.maps.Map(document.getElementById("map-container"),
-        var_mapoptions);
-
-      var var_marker = new google.maps.Marker({
-        position: var_location,
-        map: var_map,
-        title: "San Mateo"
-      });
-    }
-
-    // Initialize maps
-    google.maps.event.addDomListener(window, 'load', regular_map);
-  </script>
-
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAlsxObGA1kf5G8kRXfBDa8ZY8Z9Jgqt0U&libraries=places"></script>
   <title>ABC Toys</title>
   <link href="main.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
@@ -79,16 +43,13 @@
   <!--Main Navigation-->
   <header>
 
-
-
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navbar">
 
       <div class="container">
 
-
         <!--Navbar Brand and or Icon-->
-        <a class="navbar-brand animated fadeIn slow" href="#"><i class="icon icon-pacman"></i>ABC Toys</a>
+        <a class="navbar-brand animated fadeIn delay-2s slow" href="#"><i class="icon icon-pacman"></i>ABC Toys</a>
 
         <!--Collapsable Button-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
@@ -116,18 +77,23 @@
             </li>
           </ul>
           <!--Links-->
+          <div class="theme-switch-wrapper ml-auto mr-1 pr-1 pr-lg-4 mr-lg-4 nav-flex-icons">
+            <label class="switch" for="checkbox">
+              <input type="checkbox" class="form-control waves-effect" id="checkbox" />
+              <div class="slider round"></div>
+            </label>
+            <em class="my-2 my-sm-1 py-3 py-sm-1 d-inline-block align-top navbar-text grey-text">Enable Dark Mode!</em>
+          </div>
           <div class="mask rgba-white-light"></div>
         </div>
         <!--Collapsable Content-->
       </div>
+
     </nav>
-
-
     <!--/.Navbar-->
 
     <!--Mask-->
-    <div id="intro" class="view">
-
+    <div id="intro" class="view backstretch">
       <div class="mask rgba-stylish-strong">
         <div class="mask  pattern-7">
           <div class="container-fluid d-flex align-items-center justify-content-center h-100">
@@ -146,19 +112,13 @@
                 <hr class="animated wow fadeIn slow hr-light" data-wow-delay="0.4s">
 
                 <!--Description-->
-                <h4 class="animated wow fadeIn slow white-text my-4" data-wow-delay="0.4s" id="titledesc">ABC Toys is a company that
-                  opened its doors in 2001
-                  and it has kept its
-                  mission
-                  for
-                  all
-                  those years. The mission of our company is to create toys that are safe for
-                  kindergarten kids but
-                  that
-                  challenge the kids' mind and motor skills making learning a fun task.</h4>
+                <h4 class="animated wow fadeIn slow white-text my-4" data-wow-delay="0.4s" id="titledesc">
+                  ABC Toys is a company that opened its doors in 2001 and it has kept its
+                  mission for all those years. The mission of our company is to create toys that are safe for
+                  kindergarten kids but that challenge the kids' mind and motor skills making learning a fun task.</h4>
                 <h4 class="animated fadeIn slow white-text my-4 muted" id="titledesc2">By the way, parents love our toys too</h4>
-
                 <!--Badge for Unsplash Photographer-->
+
                 <span class="white-text animated fadeIn slow" id="titlespan">
                   Photo by&nbsp;
                   <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px"
@@ -184,14 +144,14 @@
   <!--Main Navigation-->
 
   <!--Main layout-->
-  <main class="mt-5">
+  <main class="p-1 md-p-5">
     <div class="container">
 
       <!--Section: Products-->
       <section id="products" class="text-center">
 
         <!-- Heading -->
-        <h2 class="mb-5 font-weight-bold">Products</h2>
+        <h2 class="mb-5 pt-5 font-weight-bold">Products</h2>
 
         <!--Grid row-->
         <div class="row d-flex justify-content-center mb-4">
@@ -201,7 +161,7 @@
             <p class="font-weight-bolder">Here are five of our most popular Toys that we sell.</p>
           </div>
         </div>
-        <div class="accordion z-depth-2" id="accordionExample">
+        <div class="accordion z-depth-2  wow animated rotateInUpRight slow" id="accordionExample">
           <div class="card">
             <div class="card-header bg-light" id="headingOne">
               <h2 class="mb-0">
@@ -356,10 +316,10 @@
 
       <!--Section: Contact-->
       <section id="contact" class="mb-4">
-        <div class="edge-header deep-purple accent-4 mx-0 px-0"></div>
-        <div class="container-fluid free-bird">
-          <div class="row">
-            <div class="col-sm-12 col-md-10 mx-auto float-none white z-depth-1 py-2 px-2">
+        <div class="edge-header blue-gradient accent-4 mx-0 px-0"></div>
+        <div id="freebird" class="container-fluid free-bird">
+          <div class="row justify-content-center">
+            <div class="col-12 col-md-10 px-0 float-none white z-depth-1 wow animated flipInY slow">
 
 
               <div class="card-body">
@@ -373,21 +333,18 @@
                   1234 ABC street, San Mateo, CA, 94401. Send us an email at <a href="mailto:contact@example.com?subject=Feedback">contact@example.com</a>
                   or give us a call at <a href="tel:+16501231234">(650)123-1234</a>.
                 </address>
-                
-                <p class="text-center w-responsive mx-auto mb-1"><span>Click here to like our facebook page!
-                <iframe
-                  src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FABCtoys1&width=124&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId=1263721247114186"
-                  width="124" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-                  allow="encrypted-media"></iframe>
+
+                <p class="text-center w-responsive mx-auto mb-1"><span>Click here to like our facebook page!<button type="button" class="btn btn-sm btn-fb btn-blue rounded">
+                  <i class="fab fa-facebook-f pr-1"></i> Facebook</button>
                 </span></p>
 
                 <!--Grid row-->
                 <div class="row justify-content-center">
 
                   <!--Grid column-->
-                  <div class="col-lg-8 col-md-12 col-sm-12">
+                  <div class="col-lg-8 col-12">
                     <!-- Form contact -->
-                    <form class="p-5 grey-text">
+                    <form class="p-1 md-p-3 lg-p-5 grey-text">
                       <div class="md-form form-group"> <i class="icon icon-user prefix"></i>
                         <label for="form3" class="bmd-label-placeholder">Your name</label>
                         <input type="text" id="form3" class="form-control">
@@ -405,7 +362,7 @@
                         <textarea type="text" id="form8" class="md-textarea form-control" rows="4"></textarea>
                       </div>
                       <div class="text-center mt-3 py-4 bmd-form-group">
-                        <button style="background: #b388ff;" class="btn btn-raised rounded">Send <i
+                        <button id="contact-send-btn" style="background: #b388ff;" class="btn btn-raised rounded">Send <i
                             class="fa fa-paper-plane ml-1"></i></button>
                       </div>
                     </form>
@@ -437,52 +394,94 @@
       <hr class="my-5">
 
       <section id="location">
-        <div class="card bordered z-depth-3">
-          <div class="card-body">
-
+            <!--Row-->
             <div class="row justify-content-center">
-
               <!--Grid column-->
               <div class="col-md-9 col-lg-12">
-
                 <!-- Heading -->
-                <h2 class="mb-2 font-weight-bold text-center h2-responsive my-4">Location</h2>
+                <h2 class="mb-2 font-weight-bold text-center h2-responsive my-4">Location & Directions</h2>
                 <p class="text-center"><i class="fas fa-map fa-1x mr-2 grey-text"></i>San Mateo, CA</p>
-
               </div>
             </div>
-            <div class="container">
+            <!--/Row-->
+
+            <!--Container-fluid-->
+            <div class="container-fluid">
               <div class="row justify-content-center">
                 <div class="col-md-8">
+                  <div class="alert alert-primary alert-dismissable wow animated fadeInLeft show slow z-depth-2" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="alert-heading">Current Location</h4>
+
+                   <i class="icon icon-location2"></i>
+                   <strong>Latitude: <span id="locLat" class="indigo-text"></span></strong><br />
+                   <i class="icon icon-location2"></i>
+                 <strong>Longitude: <span id="locLong" class="indigo-text"></span></strong>
+                  </div>
+
+                  <div style="display: none">
+                    <input id="origin-input" class="controls" type="text"
+                          placeholder="Enter an origin location">
+
+                    <input id="destination-input" class="controls" type="text"
+                          placeholder="Enter a destination location">
+
+                    <div id="mode-selector" class="controls">
+                      <input type="radio" name="type" id="changemode-walking" checked="checked">
+                        <label for="changemode-walking">Walking</label>
+
+                      <input type="radio" name="type" id="changemode-transit">
+                        <label for="changemode-transit">Transit</label>
+
+                      <input type="radio" name="type" id="changemode-driving">
+                        <label for="changemode-driving">Driving</label>
+                    </div>
+                  </div>
                   <!--Google map-->
-                  <div id="map-container" class="z-depth-3 wow animated fadeInUp slow map-container mb-5 mx-0 px-0"
-                    style="height: 600px; width: auto;"></div>
+                  <div id="map-container" class="z-depth-3 wow animated flipInY slower map-container mb-5 mx-0 px-0"
+                    style="height: 600px; width: auto;">
+                      <div class="loader">
+                        <h3>LOADING</h3>
+                          <span></span>
+                          <span></span>
+                          <span></span>
+                      </div>
+                    </div>
                 </div>
-                <!--Grid column-->
+              <!--Grid column-->
                 <div class="col-md-3 text-center align-content-center justify-content-center">
                   <ul class="list-unstyled mb-0">
-                    <li class="py-5"><i class="fas fa-map-marker-alt fa-2x"></i>
-                      <address>1234 ABC street, San Mateo, CA 94402, USA</address>
+                    <li class="py-0 py-md-5"><i class="fas fa-map-marker-alt fa-2x"></i>
+                      <address>1170 W Hillsdale Blvd, San Mateo, CA 94403, USA</address>
                     </li>
 
-                    <li class="py-5"><i class="fas fa-phone mt-4 fa-2x"></i>
+                    <li class="py-0 py-md-5"><i class="fas fa-phone mt-4 fa-2x"></i>
                       <p><a href="tel:+16501231234">(650)123-1234</a></p>
                     </li>
 
-                    <li class="py-5"><i class="fas fa-envelope mt-4 fa-2x"></i>
+                    <li class="py-0 py-md-5"><i class="fas fa-envelope mt-4 fa-2x"></i>
                       <p><a href="mailto:contact@example.com?subject=Feedback">contact@example.com</a></p>
                     </li>
                   </ul>
                 </div>
                 <!--Grid column-->
+                <div class="col-12">
+                <!--Google directions panel-->
+                <div id="directionsPanel" class="z-depth-3 wow animated fadeInUp slow mb-5 mx-0 px-0"></div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
+            <!--/Container-fluid-->
       </section>
     </div>
 
   </main>
+
+<!-- Main js script (Google Maps, Theme switch, etc.) -->
+<script type="text/javascript" src="./js/main.js"></script>
+
 </body>
 
 </html>
